--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>javax.json</groupId>
+    <artifactId>javax.json-api</artifactId>
+    <version>1.0</version>
+</dependency>
   </dependencies>
   <profiles>
     <profile>
@@ -35,7 +40,7 @@
             <version>2.1.1</version>
             <configuration>
               <outputDirectory>deployments</outputDirectory>
-              <warName>ROOT</warName>
+              <warName>AIOP</warName>
             </configuration>
           </plugin>
         </plugins>
