--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -4,6 +4,7 @@
   "main": "app.js",
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-cookies": "^1.4.7",
     "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.5",
     "jquery": "^2.1.4"
