--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -4,9 +4,11 @@
   "main": "app.js",
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-cookie": "^1.0.0",
     "angular-cookies": "^1.4.7",
     "angular-ui-router": "^0.2.15",
     "bootstrap": "^3.3.5",
+    "fastclick": "^1.0.6",
     "jquery": "^2.1.4"
   },
   "devDependencies": {
